Left section of body part added

--- a/fb.html
+++ b/fb.html
@@ -37,15 +37,25 @@
 </tr>
 
 
-
-
-
-
         </table>
 </form>
     </div>
 
-</div>
+</div> 
+
+<div class="main-body">
+
+    <div class="body-left">
+<p class="para">Facebook helps you connect and share with the <br> people in your life.</p>
+<img class="connect-image" src="fb.png" alt="">
+    </div
+    >
+    <div class="body-right">
+
+    </div>
+
+
+</div> 
 
 
 
