Sign-up form added

--- a/fb.html
+++ b/fb.html
@@ -51,6 +51,109 @@
     </div
     >
     <div class="body-right">
+<h1 class="create-account">Create an account</h1>
+<h3 class="Its-quick">It's quick and easy.</h3>
+
+<form action="">
+    <input type="text" placeholder="First Name" class="input-box">
+    <input type="text" placeholder="Surname" class="input-box">
+    <br> <br>
+    <input type="email" placeholder="Mobile number or email address" class="input-box-2">
+    <br> <br>
+    <input type="password" placeholder="Password" class="input-box-2">
+    <br>
+    <h4 style="color:rgb(87, 87, 87);">Birthday </h4>
+    <select name="" id="">
+        <option value="">Day</option>
+        <option value="">1</option>
+        <option value="">2</option>
+        <option value="">3</option>
+        <option value="">4</option>
+        <option value="">5</option>
+        <option value="">6</option>
+        <option value="">7</option>
+        <option value="">8</option>
+        <option value="">9</option>
+        <option value="">10</option>
+        <option value="">11</option>
+        <option value="">12</option>
+        <option value="">13</option>
+        <option value="">14</option>
+        <option value="">15</option>
+        <option value="">16</option>
+        <option value="">17</option>
+        <option value="">18</option>
+        <option value="">19</option>
+        <option value="">20</option>
+        <option value="">21</option>
+        <option value="">22</option>
+        <option value="">23</option>
+        <option value="">24</option>
+        <option value="">25</option>
+        <option value="">26</option>
+        <option value="">27</option>
+        <option value="">28</option>
+        <option value="">29</option>
+        <option value="">30</option>
+        <option value="">31</option>
+    </select>
+
+    <select name="" id="">
+        <option value="">Month</option>
+        <option value="">January</option>
+        <option value="">February</option>
+        <option value="">March</option>
+        <option value="">April</option>
+        <option value="">May</option>
+        <option value="">June</option>
+        <option value="">July</option>
+        <option value="">August</option>
+        <option value="">September</option>
+        <option value="">October</option>
+        <option value="">November</option>
+        <option value="">December</option>
+    </select>
+
+    <select name="" id="">
+        <option value="">Year</option>
+        <option value="">2000</option>
+        <option value="">2001</option>
+        <option value="">2002</option>
+        <option value="">2003</option>
+        <option value="">2004</option>
+        <option value="">2005</option>
+        <option value="">2006</option>
+        <option value="">2007</option>
+        <option value="">2008</option>
+        <option value="">2009</option>
+        <option value="">2010</option>
+        <option value="">2011</option>
+        <option value="">2012</option>
+        <option value="">2013</option>
+        <option value="">2014</option>
+        <option value="">2015</option>
+        <option value="">2016</option>
+        <option value="">2017</option>
+        <option value="">2018</option>
+        <option value="">2019</option>
+        <option value="">2020</option>
+        <option value="">2021</option>
+    </select>
+
+    <br>
+    <h4 style="color: rgb(87, 87, 87);">Gender</h4> 
+    <input type="radio" name="Gender">
+    <label>Female</label>
+    <input type="radio" name="Gender">
+    <label>Male</label>
+    <input type="radio" name="Gender">
+    <label>Custom</label>
+
+<p style="color:rgb(59 59 59 / 85%); font-size: 13px;">By clicking Sign Up, you agree to our <a class="conditions" href="">Terms</a>, <a class="conditions" href="">Data policy</a> and <br><a class="conditions"  href="">Cookie policy</a>.You may recieve sms notifications from us and <br> can opt out anytime. </p>
+
+<input type="submit" id="signup" value="Sign Up">
+
+</form>
 
     </div>
 
