--- a/fb.html
+++ b/fb.html
@@ -54,90 +54,90 @@
 <h1 class="create-account">Create an account</h1>
 <h3 class="Its-quick">It's quick and easy.</h3>
 
-<form action="">
-    <input type="text" placeholder="First Name" class="input-box">
-    <input type="text" placeholder="Surname" class="input-box">
+<form action="" id="signup-form">
+    <input type="text" name="fname" placeholder="First Name" class="input-box">
+    <input type="text" name="sname" placeholder="Surname" class="input-box">
     <br> <br>
-    <input type="email" placeholder="Mobile number or email address" class="input-box-2">
+    <input type="email" name="emailid" placeholder="Mobile number or email address" class="input-box-2">
     <br> <br>
-    <input type="password" placeholder="Password" class="input-box-2">
+    <input type="password" name="password" placeholder="Password" class="input-box-2">
     <br>
     <h4 style="color:rgb(87, 87, 87);">Birthday </h4>
-    <select name="" id="">
+    <select name="Day" id="">
         <option value="">Day</option>
-        <option value="">1</option>
-        <option value="">2</option>
-        <option value="">3</option>
-        <option value="">4</option>
-        <option value="">5</option>
-        <option value="">6</option>
-        <option value="">7</option>
-        <option value="">8</option>
-        <option value="">9</option>
-        <option value="">10</option>
-        <option value="">11</option>
-        <option value="">12</option>
-        <option value="">13</option>
-        <option value="">14</option>
-        <option value="">15</option>
-        <option value="">16</option>
-        <option value="">17</option>
-        <option value="">18</option>
-        <option value="">19</option>
-        <option value="">20</option>
-        <option value="">21</option>
-        <option value="">22</option>
-        <option value="">23</option>
-        <option value="">24</option>
-        <option value="">25</option>
-        <option value="">26</option>
-        <option value="">27</option>
-        <option value="">28</option>
-        <option value="">29</option>
-        <option value="">30</option>
-        <option value="">31</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
+        <option value="21">21</option>
+        <option value="22">22</option>
+        <option value="23">23</option>
+        <option value="24">24</option>
+        <option value="25">25</option>
+        <option value="26">26</option>
+        <option value="27">27</option>
+        <option value="28">28</option>
+        <option value="29">29</option>
+        <option value="30">30</option>
+        <option value="31">31</option>
     </select>
 
-    <select name="" id="">
+    <select name="Month" id="">
         <option value="">Month</option>
-        <option value="">January</option>
-        <option value="">February</option>
-        <option value="">March</option>
-        <option value="">April</option>
-        <option value="">May</option>
-        <option value="">June</option>
-        <option value="">July</option>
-        <option value="">August</option>
-        <option value="">September</option>
-        <option value="">October</option>
-        <option value="">November</option>
-        <option value="">December</option>
+        <option value="January">January</option>
+        <option value="February">February</option>
+        <option value="March">March</option>
+        <option value="April">April</option>
+        <option value="May">May</option>
+        <option value="June">June</option>
+        <option value="July">July</option>
+        <option value="August">August</option>
+        <option value="September">September</option>
+        <option value="October">October</option>
+        <option value="November">November</option>
+        <option value="December">December</option>
     </select>
 
-    <select name="" id="">
+    <select name="Year" id="">
         <option value="">Year</option>
-        <option value="">2000</option>
-        <option value="">2001</option>
-        <option value="">2002</option>
-        <option value="">2003</option>
-        <option value="">2004</option>
-        <option value="">2005</option>
-        <option value="">2006</option>
-        <option value="">2007</option>
-        <option value="">2008</option>
-        <option value="">2009</option>
-        <option value="">2010</option>
-        <option value="">2011</option>
-        <option value="">2012</option>
-        <option value="">2013</option>
-        <option value="">2014</option>
-        <option value="">2015</option>
-        <option value="">2016</option>
-        <option value="">2017</option>
-        <option value="">2018</option>
-        <option value="">2019</option>
-        <option value="">2020</option>
-        <option value="">2021</option>
+        <option value="2000">2000</option>
+        <option value="2001">2001</option>
+        <option value="2002">2002</option>
+        <option value="2003">2003</option>
+        <option value="2004">2004</option>
+        <option value="2005">2005</option>
+        <option value="2006">2006</option>
+        <option value="2007">2007</option>
+        <option value="2008">2008</option>
+        <option value="2009">2009</option>
+        <option value="2010">2010</option>
+        <option value="2011">2011</option>
+        <option value="2012">2012</option>
+        <option value="2013">2013</option>
+        <option value="2014">2014</option>
+        <option value="2015">2015</option>
+        <option value="2016">2016</option>
+        <option value="2017">2017</option>
+        <option value="2018">2018</option>
+        <option value="2019">2019</option>
+        <option value="2020">2020</option>
+        <option value="2021">2021</option>
     </select>
 
     <br>
@@ -183,5 +183,13 @@
 
    </div> 
     
+   <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+
+  <script src="fb.js"></script>
 </body>
 </html>
